--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,16 @@ mark,
   color: #6c757d;
 }
 
+.allison-regular {
+  font-family: "Allison", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+form {
+  background: #f9f3ed;
+}
+
 code {
   font-size: 87.5%;
   color: #e83e8c;
@@ -10880,7 +10890,7 @@ h5,
   height: 850px;
 }
 .slider-text h1 {
-  font-size: 60px;
+  font-size: 70px;
   color: #000000;
   line-height: 1.1;
   font-weight: 400;
@@ -11345,6 +11355,8 @@ h5,
 }
 .property-wrap .img {
   display: block;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   width: 100%;
   height: 250px;
   position: relative;
@@ -11409,6 +11421,11 @@ h5,
   -webkit-box-shadow: 0px 5px 21px -14px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: 0px 5px 21px -14px rgba(0, 0, 0, 0.14);
   box-shadow: 0px 5px 21px -14px rgba(0, 0, 0, 0.14);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-left: 1px dashed #ced4da;
+  border-right: 1px dashed #ced4da;
+  border-bottom: 1px dashed #ced4da;
   width: 100%;
   padding: 25px;
 }
@@ -11826,9 +11843,10 @@ h5,
 }
 .ftco-fullwidth .overlay {
   position: absolute;
-  width: 73%;
+  width: 100%;
   top: 0;
   right: 0;
+  left: 0;
   bottom: 0;
   content: "";
   opacity: 0.3;
@@ -11868,6 +11886,8 @@ h5,
 }
 .ftco-fullwidth .img {
   height: 600px;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 250px;
 }
 
 .ftco-section-parallax {
@@ -12555,21 +12575,6 @@ textarea.form-control {
 .ftco-counter {
   position: relative;
 }
-.ftco-counter .overlay {
-  position: absolute;
-  width: 27%;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  content: "";
-  opacity: 0;
-  background: #b07032;
-}
-@media (min-width: 992px) {
-  .ftco-counter .overlay {
-    opacity: 0.3;
-  }
-}
 .ftco-counter .text strong.number {
   font-weight: 300;
   font-size: 50px;
@@ -12743,6 +12748,7 @@ textarea.form-control {
 }
 
 .contact-section .contact-form {
+  border-radius: 30px;
   width: 100%;
 }
 
