--- a/css/styles.css
+++ b/css/styles.css
@@ -11697,8 +11697,10 @@ h5,
 
 @media (max-width: 767.98px) {
   .img-3 {
-    height: 600px;
+    height: 300px;
     margin-bottom: 30px;
+    border-bottom-left-radius: 20px !important;
+    margin: 10px 10px;
   }
 }
 
@@ -11865,6 +11867,13 @@ h5,
   .ftco-fullwidth .one-half {
     width: 100%;
     margin-left: 30px;
+  }
+
+  .ftco-fullwidth .img {
+    height: 300px !important;
+    margin-top: -20px !important;
+    margin-bottom: 50px !important;
+    border-radius: 20px !important;
   }
 }
 @media (min-width: 1200px) {
@@ -12141,6 +12150,7 @@ textarea.form-control {
 @media (max-width: 991.98px) {
   #map {
     height: 300px;
+    margin-top: 50px;
   }
 }
 
@@ -12607,6 +12617,8 @@ textarea.form-control {
 }
 
 .blog-entry {
+  border: 1px solid #cccccc;
+  border-radius: 20px;
   overflow: hidden;
   width: 100%;
 }
@@ -12629,6 +12641,7 @@ textarea.form-control {
   font-size: 20px;
   margin-bottom: 0;
   font-weight: 500;
+  margin: 0 10px;
 }
 .blog-entry .text .heading a {
   color: #000000;
@@ -12640,6 +12653,7 @@ textarea.form-control {
 }
 .blog-entry .meta > div {
   display: inline-block;
+  margin: 0 10px;
   margin-right: 5px;
   margin-bottom: 0;
   font-size: 15px;
