--- a/css/styles-0.css
+++ b/css/styles-0.css
@@ -10735,7 +10735,14 @@ h5,
   font-size: 20px;
 }
 
+@media (max-width: 767.98px) {
+  .hero-wrap {
+    background-image: url("../images/image_7.jpg") !important;
+  }
+}
+
 .hero-wrap {
+  background-image: url("../images/bg_0.jpg");
   width: 100%;
   height: 850px;
   position: inherit;
