--- a/css/styles-1.css
+++ b/css/styles-1.css
@@ -10735,14 +10735,23 @@ h5,
   font-size: 20px;
 }
 
+.title {
+  color: #b07032;
+  font-size: 100px;
+}
+
 @media (max-width: 767.98px) {
   .hero-wrap {
     background-image: url("../images/image_7.jpg") !important;
   }
+  .title {
+    color: #b07032;
+    font-size: 80px;
+  }
 }
 
 .hero-wrap {
-  background-image: url("../images/bg_0.jpg");
+  background-image: url("../images/image_7.jpg");
   width: 100%;
   height: 850px;
   position: inherit;
