--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -10751,7 +10751,7 @@ h5,
 }
 
 .hero-wrap {
-  background-image: url("../images/image_7.jpg");
+  background-image: url("../images/bg_0.jpg");
   width: 100%;
   height: 850px;
   position: inherit;
