--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -13136,3 +13136,230 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
+
+/* start: Avatar */
+.avatar-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.avatar {
+  position: relative;
+  transition: 0.2s;
+}
+.avatar:not(:first-child) {
+  margin-left: -1.5rem;
+}
+.avatar:hover {
+  z-index: 1;
+  transform: translateY(-0.5rem);
+}
+.avatar-name {
+  position: absolute;
+  bottom: calc(100% + 0.5rem);
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.25rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-size: 0.875rem;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.2s;
+}
+.avatar-name::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 0.5rem solid;
+  border-color: rgba(0, 0, 0, 0.7) transparent transparent;
+}
+.avatar:hover .avatar-name {
+  opacity: 1;
+  visibility: visible;
+}
+.avatar img {
+  width: 3rem;
+  height: 3rem;
+  display: block;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
+}
+/* end: Avatar */
+
+/* start: Ribbon */
+.ribbon {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  position: absolute;
+}
+.ribbon::before,
+.ribbon::after {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  display: block;
+  border: 3px solid #b07032;
+}
+.ribbon span {
+  position: absolute;
+  display: block;
+  width: 165px;
+  padding: 5px 0;
+  background-color: #b07032;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.7);
+}
+
+/* top left*/
+.ribbon-top-left {
+  top: -3px;
+  left: -3px;
+}
+.ribbon-top-left::before,
+.ribbon-top-left::after {
+  border-top-color: transparent;
+  border-left-color: transparent;
+}
+.ribbon-top-left::before {
+  top: 0;
+  right: 0;
+}
+.ribbon-top-left::after {
+  bottom: 0;
+  left: 0;
+}
+.ribbon-top-left span {
+  right: -22px;
+  top: 15px;
+  transform: rotate(-45deg);
+  color: #fff;
+  padding-top: 10px;
+  padding-left: 55px;
+}
+
+/* top right*/
+.ribbon-top-right {
+  top: -3px;
+  right: -3px;
+}
+.ribbon-top-right::before,
+.ribbon-top-right::after {
+  border-top-color: transparent;
+  border-right-color: transparent;
+}
+.ribbon-top-right::before {
+  top: 0;
+  left: 0;
+}
+.ribbon-top-right::after {
+  bottom: 0;
+  right: 0;
+}
+.ribbon-top-right span {
+  left: -22px;
+  top: 10px;
+  transform: rotate(45deg);
+  color: #fff;
+  padding-top: 10px;
+  padding-left: 50px;
+}
+
+.wdp-ribbon {
+  display: inline-block;
+  padding: 2px 15px;
+  position: absolute;
+  right: 0px;
+  top: 20px;
+  line-height: 24px;
+  height: 24px;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25em;
+  border-radius: 0;
+  text-shadow: none;
+  font-weight: normal;
+  background-color: #b07032 !important;
+}
+
+.wdp-ribbon-two:before,
+.wdp-ribbon-two:before {
+  display: inline-block;
+  content: "";
+  position: absolute;
+  left: -14px;
+  top: 0;
+  border: 9px solid transparent;
+  border-width: 14px 8px;
+  border-right-color: #b07032;
+}
+.wdp-ribbon-two:before {
+  border-color: #b07032;
+  border-left-color: transparent !important;
+  left: -9px;
+}
+.wdp-ribbon-four {
+  right: 10px;
+  top: 10px;
+  line-height: 60px;
+  height: 60px;
+}
+.wdp-ribbon-five {
+  background: #b07032;
+  right: 10px;
+  top: 10px;
+  padding: 0px;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 60px;
+  border-radius: 50%;
+}
+.wdp-ribbon-six {
+  background: none !important;
+  position: relative;
+  box-sizing: border-box;
+  position: absolute;
+  width: 65px;
+  height: 65px;
+  top: 0px;
+  right: 0px;
+  padding: 0px;
+  overflow: hidden;
+}
+.wdp-ribbon-inner-wrap {
+  -ms-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -webkit-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+.wdp-ribbon-border {
+  width: 0;
+  height: 0;
+  border-right: 65px solid #b07032;
+  border-bottom: 65px solid transparent;
+  z-index: 12;
+  position: relative;
+  top: -20px;
+}
+.wdp-ribbon-text {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 13px;
+  position: absolute;
+  z-index: 14;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 15px;
+  left: -5px;
+  width: 91px;
+  text-align: center;
+}
